--- a/ITech/adminpanel/ui/style.css
+++ b/ITech/adminpanel/ui/style.css
@@ -50,7 +50,7 @@ input {
 
 .role input[type="radio"]:checked+label,
 .Checked+label {
-    background: #14a44d;
+    background: #5080ff;
     border-radius: 20px;
     color: #fff;
 }
@@ -64,6 +64,18 @@ input {
 }
 
 .role label:hover {
-    background: #4cc175;
+    background: #496fd8;
     color: #fff;
 }
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  --mdb-nav-pills-link-active-bg: #202020;
+  --mdb-nav-pills-link-active-color: #E4A11B;
+  --mdb-nav-pills-link-active-border-color: #E4A11B;
+  background-color: var(--mdb-nav-pills-link-active-bg);
+  color: var(--mdb-nav-pills-link-active-color);
+  border-color: var(--mdb-nav-pills-link-active-border-color);
+}
+
+
